<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bottle_green"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_software_all"
        style="@style/ListItemDef2"
        android:onClick="onClick"
        android:layout_margin="1dp"
        android:background="@drawable/include_buttons_bg"
        android:text="@string/software_manager_all"/>
    <TextView
        android:id="@+id/tv_software_system"
        style="@style/ListItemDef2"
        android:onClick="onClick"
        android:background="@drawable/include_buttons_bg"
        android:text="@string/software_manager_system"
        />
    <TextView
        android:id="@+id/tv_software_user"
        style="@style/ListItemDef2"
        android:onClick="onClick"
        android:layout_margin="1dp"
        android:background="@drawable/include_buttons_bg"
        android:text="@string/software_manager_user"/>
</LinearLayout>