<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_home_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tv_home_word1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.91"
            android:gravity="center"
            android:text="@string/app_name1"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_home_icon2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="0.07"
            android:src="@drawable/ic_child_configs" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50sp">

        <ImageView
            android:id="@+id/iv_home_icon"
            android:layout_width="245dp"
            android:layout_height="245dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/home_score_normal_bg" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_home_icon"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/iv_home_icon"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="180dp"
            android:text="@string/app_name2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_home_icon"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/iv_home_icon"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="60dp"
            android:text="@string/app_name3"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_home_icon"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/iv_home_icon"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="93dp"
            android:text="@string/app_name4"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_home_word2"
                android:layout_width="128dp"
                android:layout_height="75dp"
                android:drawableTop="@drawable/icon_rocket"
                android:gravity="center"
                android:text="@string/app_name5" />

            <TextView
                android:id="@+id/tv_home_word3"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/icon_softmgr"
                android:gravity="center"
                android:text="@string/app_name6" />

            <TextView
                android:id="@+id/tv_home_word4"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/icon_phonemgr"
                android:gravity="center"
                android:text="@string/app_name7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_home_word5"
                android:layout_width="128dp"
                android:layout_height="75dp"
                android:drawableTop="@drawable/icon_telmgr"
                android:gravity="center"
                android:text="@string/app_name8" />

            <TextView
                android:id="@+id/tv_home_word6"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/icon_filemgr"
                android:gravity="center"
                android:text="@string/app_name9" />

            <TextView
                android:id="@+id/tv_home_word7"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/icon_sdclean"
                android:gravity="center"
                android:text="@string/app_name10" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
