<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_software_info_in"
        android:text="@string/software_manager_room_in"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <azsecuer.androidy.com.azsecuer.activity.speedupdemo.AutomoveProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="20dp"
        android:max="100"
        android:progress="5"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:progressDrawable="@drawable/progressbar_software_bg1"
        android:id="@+id/progressBar_software_in"
        />
    <TextView
        android:id="@+id/tv_software_ramMassage_room_in"
        android:gravity="right"
        android:text="@string/software_manager_room"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_software_info_out"
        android:text="@string/software_manager_room_out"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <azsecuer.androidy.com.azsecuer.activity.speedupdemo.AutomoveProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="20dp"
        android:max="100"
        android:progress="5"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:progressDrawable="@drawable/progressbar_software_bg"
        android:id="@+id/progressBar_software_out"
        />
    <TextView
        android:id="@+id/tv_software_ramMassage_room_out"
        android:gravity="right"
        android:text="@string/software_manager_room"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content" />
</LinearLayout>